--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "my-ts-lib",
+  "name": "picoargs",
   "version": "0.0.0",
   "description": "My awesome typescript library",
   "publishConfig": {
     "access": "public"
   },
   "files": [
-    "dist"
+    "dist",
+    "/src",
+    "/mod.ts"
   ],
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -16,18 +18,23 @@
   },
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build-fast": "tsup src/index.ts --format cjs,esm",
+    "build-fast": "tsup src/index.ts --format cjs,esm --target node14",
     "build": "pnpm run build-fast -- --dts-resolve",
     "test": "pnpm run build && uvu -r sucrase/register --ignore fixture",
+    "test-cov": "c8 npm run test",
     "prepublishOnly": "pnpm run build-fast"
   },
   "license": "MIT",
   "devDependencies": {
     "@egoist/prettier-config": "1.0.0",
+    "c8": "^7.10.0",
     "prettier": "2.5.1",
     "sucrase": "3.20.3",
     "tsup": "5.11.1",
     "typescript": "4.5.3",
     "uvu": "0.5.2"
+  },
+  "engines": {
+    "node": ">=14"
   }
 }
