--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "picoargs",
+  "name": "tinyargs",
   "version": "0.1.0",
   "description": "A tiny and flexible command-line argument parser for Node.js and Deno.",
   "publishConfig": {
