--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
         run: pnpm run test-cov
 
       - name: Upload Coverage
-        if: "{{ matrix.os }} == 'ubuntu-latest'"
+        if: "${{ matrix.os }} == 'ubuntu-latest'"
         uses: coverallsapp/github-action@master
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
